[FIX][web_pdf_viewer] solved issues double scrollbar and print buttons [FIX][web_pdf_viewer] solved issue generated because of class name change [IMP] change the position of close button because of subscribe bar on top

--- a/addons/web_pdf_viewer/static/src/css/close_button.css
+++ b/addons/web_pdf_viewer/static/src/css/close_button.css
@@ -6,7 +6,8 @@ div.close_print{
     width:50px;
     position:absolute;
     right:2%;
-    top:8%;
+    top:12%;
+    z-index: 502;
     color:#C3C3C3;
     background: #3f3f3f; /* Old browsers */
     background: -moz-linear-gradient(top,  #3f3f3f 0%, #0e0e0e 100%); /* FF3.6+ */
@@ -28,7 +29,7 @@ iframe.ie_problem{
     width:50px;
     border:0px;
     right:2%;
-    top:8%;
+    top:12%;
     height:100px;
 }
 div.close_print div{
